---
config:
  theme: base
  layout: elk
  look: classic
---
erDiagram
    animals {
        id bigint(20) PK
        name varchar(100)
        slug varchar(100)
        barcode varchar(50)
        category_animals_id bigint(20) FK
        breeds_id bigint(20) FK
        age varchar(50)
        weight decimal(8_2)
        gender enum(male_female_unknown)
        health_status varchar(50)
        vaccination_status tinyint(1)
        thumbnail varchar(255)
        description longtext
        stock int(11)
        purchase_price decimal(12_2)
        selling_price decimal(12_2)
        is_active tinyint(1)
        created_at timestamp
        updated_at timestamp
        deleted_at timestamp
    }
    animals_photos {
        id bigint(20) PK
        photo varchar(255)
        animals_id bigint(20) FK
        created_at timestamp
        updated_at timestamp
        deleted_at timestamp
    }
    brands {
        id bigint(20) PK
        name varchar(100)
        slug varchar(100)
        logo varchar(255)
        created_at timestamp
        updated_at timestamp
        deleted_at timestamp
    }
    breedings {
        id bigint(20) PK
        name varchar(100)
        slug varchar(100)
        category_animals_id bigint(20) FK
        breeds_id bigint(20) FK
        photo varchar(255)
        description text
        stock int(11)
        purchase_price decimal(12_2)
        selling_price decimal(12_2)
        is_active tinyint(1)
        created_at timestamp
        updated_at timestamp
        deleted_at timestamp
    }
    breeding_packages {
        id bigint(20) PK
        name varchar(100)
        price decimal(12_2)
        description text
        breeding_id bigint(20) FK
        created_at timestamp
        updated_at timestamp
        deleted_at timestamp
    }
    breeds {
        id bigint(20) PK
        category_animals_id bigint(20) FK
        name varchar(100)
        slug varchar(100)
        created_at timestamp
        updated_at timestamp
        deleted_at timestamp
    }
    categories {
        id bigint(20) PK
        name varchar(100)
        slug varchar(100)
        description text
        icon varchar(255)
        created_at timestamp
        updated_at timestamp
        deleted_at timestamp
    }
    category_animals {
        id bigint(20) PK
        name varchar(100)
        slug varchar(100)
        description text
        icon varchar(255)
        created_at timestamp
        updated_at timestamp
        deleted_at timestamp
    }
    category_groomings {
        id bigint(20) PK
        name varchar(100)
        slug varchar(100)
        description text
        photo varchar(255)
        created_at timestamp
        updated_at timestamp
        deleted_at timestamp
    }
    expenses {
        id bigint(20) PK
        name varchar(100)
        note text
        date_expense date
        amount decimal(12_2)
        created_at timestamp
        updated_at timestamp
        deleted_at timestamp
    }
    groomings {
        id bigint(20) PK
        name varchar(100)
        slug varchar(100)
        category_animals_id bigint(20) FK
        category_grooming_id bigint(20) FK
        photo varchar(255)
        description text
        stock int(11)
        purchase_price decimal(12_2)
        selling_price decimal(12_2)
        is_active tinyint(1)
        created_at timestamp
        updated_at timestamp
        deleted_at timestamp
    }
    grooming_packages {
        id bigint(20) PK
        name varchar(100)
        price decimal(12_2)
        description text
        grooming_id bigint(20) FK
        created_at timestamp
        updated_at timestamp
        deleted_at timestamp
    }
    hotels {
        id bigint(20) PK
        name varchar(100)
        slug varchar(100)
        category_animals_id bigint(20) FK
        description text
        price_per_day decimal(12_2)
        capacity int(11)
        thumbnail varchar(255)
        is_active tinyint(1)
        created_at timestamp
        updated_at timestamp
        deleted_at timestamp
    }
    hotel_packages {
        id bigint(20) PK
        name varchar(100)
        price decimal(12_2)
        description text
        hotel_id bigint(20) FK
        created_at timestamp
        updated_at timestamp
        deleted_at timestamp
    }
    migrations {
        id int(10) PK
        migration varchar(255)
        batch int(11)
    }
    olshop_transactions {
        id bigint(20) PK
        name varchar(100)
        phone varchar(20)
        email varchar(100)
        sub_total_amount decimal(12_2)
        promo_code_id bigint(20) FK
        discount_amount decimal(12_2)
        grand_total_amount decimal(12_2)
        province varchar(100)
        city_regency varchar(100)
        post_code varchar(10)
        complete_address text
        is_paid tinyint(1)
        trx_id varchar(50)
        package_resi_number varchar(50)
        courier varchar(50)
        shipping_service varchar(255)
        weight_total decimal(8_2)
        shipping_cost decimal(12_2)
        estimated_delivery varchar(100)
        payment_method_id bigint(20) FK
        proof varchar(255)
        created_at timestamp
        updated_at timestamp
        deleted_at timestamp
    }
    order {
        id bigint(20) PK
        pos_transaction_id bigint(20) FK
        olshop_transaction_id bigint(20) FK
        purchases_id bigint(20) FK
        type varchar(50)
        product_id bigint(20) FK
        animals_id bigint(20) FK
        grooming_id bigint(20) FK
        breeding_id bigint(20) FK
        hotel_id bigint(20) FK
        quantity int(11)
        unit_price decimal(12_2)
        created_at timestamp
        updated_at timestamp
        deleted_at timestamp
    }
    password_reset_tokens {
        email varchar(255) PK
        token varchar(255)
        created_at timestamp
    }
    payment_methods {
        id bigint(20) PK
        name varchar(50)
        account_number varchar(50)
        image varchar(255)
        olshop_transaction tinyint(1)
        pos_transaction tinyint(1)
        is_cash tinyint(1)
        created_at timestamp
        updated_at timestamp
        deleted_at timestamp
    }
    pet_information {
        id bigint(20) PK
        order_id bigint(20) FK
        name varchar(100)
        category_animals_id bigint(20) FK
        age int(11)
        photo varchar(255)
        description text
        check_in date
        check_out date
        days int(11)
        on_petshop tinyint(1)
        created_at timestamp
        updated_at timestamp
        deleted_at timestamp
    }
    pos_transactions {
        id bigint(20) PK
        name varchar(100)
        phone varchar(20)
        email varchar(100)
        gender enum(_male_female_)
        total_price decimal(12_2)
        note text
        payment_method_id bigint(20) FK
        paid_amount decimal(12_2)
        change_amount decimal(12_2)
        trx_id varchar(50)
        created_at timestamp
        updated_at timestamp
        deleted_at timestamp
    }
    products {
        id bigint(20) PK
        name varchar(100)
        slug varchar(100)
        barcode varchar(50)
        weight decimal(8_2)
        thumbnail varchar(255)
        description longtext
        purchase_price decimal(12_2)
        selling_price decimal(12_2)
        is_active tinyint(1)
        is_popular tinyint(1)
        stock int(11)
        category_id bigint(20) FK
        brand_id bigint(20) FK
        category_animals_id bigint(20) FK
        created_at timestamp
        updated_at timestamp
        deleted_at timestamp
    }
    product_photos {
        id bigint(20) PK
        photo varchar(255)
        product_id bigint(20) FK
        created_at timestamp
        updated_at timestamp
        deleted_at timestamp
    }
    promo_codes {
        id bigint(20) PK
        code varchar(50)
        discount_amount decimal(12_2)
        start_date datetime
        end_date datetime
        is_active tinyint(1)
        created_at timestamp
        updated_at timestamp
        deleted_at timestamp
    }
    purchases {
        id bigint(20) PK
        purchase_number varchar(255)
        purchase_date date
        supplier_id bigint(20) FK
        total_amount decimal(12_2)
        notes text
        status enum(_draft_ordered_received_cancelled)
        proof varchar(255)
        created_at timestamp
        updated_at timestamp
    }
    purchase_return {
        id bigint(20) PK
        return_date date
        return_number varchar(255)
        supplier_id bigint(20) FK
        purchases_id bigint(20) FK
        refund_amount decimal(12_2)
        status enum(pending_approved_rejected_processed_refunded)
        return_approved_date date
        notes text
        created_at timestamp
        updated_at timestamp
    }
    return_items {
        id bigint(20) PK
        purchase_return_id bigint(20) FK
        transaction_return_id bigint(20) FK
        type varchar(50)
        product_id bigint(20) FK
        animals_id bigint(20) FK
        grooming_id bigint(20) FK
        breeding_id bigint(20) FK
        hotel_id bigint(20) FK
        quantity int(11)
        unit_price decimal(12__2)
        reason text
        created_at timestamp
        updated_at timestamp
    }
    suppliers {
        id bigint(20) PK
        name varchar(100)
        email varchar(100)
        phone varchar(20)
        address text
        created_at timestamp
        updated_at timestamp
        deleted_at timestamp
    }
    transaction_returns {
        id bigint(20) PK
        return_date date
        return_number varchar(255)
        type varchar(50)
        pos_transaction_id bigint(20) FK
        olshop_transaction_id bigint(20) FK
        refund_amount decimal(12_2)
        status enum(pending_approved_rejected_processed_refunded)
        return_approved_date date
        notes text
        created_at timestamp
        updated_at timestamp
    }
    users {
        id bigint(20) PK
        name varchar(255)
        email varchar(255)
        email_verified_at timestamp
        password varchar(255)
        remember_token varchar(100)
        created_at timestamp
        updated_at timestamp
    }
    animals ||--o{ animals_photos : "has"
    animals }|--|| category_animals : "belongs to"
    animals }|--|| breeds : "belongs to"
    breedings }|--|| category_animals : "belongs to"
    breedings }|--|| breeds : "belongs to"
    breedings ||--o{ breeding_packages : "has"
    breeds }|--|| category_animals : "belongs to"
    groomings }|--|| category_animals : "belongs to"       
    groomings }|--|| category_groomings : "belongs to"
    groomings ||--o{ grooming_packages : "has"
    hotels }|--|| category_animals : "belongs to"
    hotels ||--o{ hotel_packages : "has"
    olshop_transactions }|--|| payment_methods : "uses"
    olshop_transactions }|--|| promo_codes : "uses"
    order }|--|| pos_transactions : "belongs to"
    order }|--|| olshop_transactions : "belongs to"
    order }|--|| purchases : "belongs to"
    order }|--|| products : "contains"
    order }|--|| animals : "contains"
    order }|--|| groomings : "contains"
    order }|--|| breedings : "contains" 
    order }|--|| hotels : "contains"
    order ||--o{ pet_information : "has"
    pet_information }|--|| category_animals : "belongs to"
    pos_transactions }|--|| payment_methods : "uses"
    products }|--|| categories : "belongs to"
    products }|--|| brands : "belongs to"
    products }|--|| category_animals : "belongs to"
    products ||--o{ product_photos : "has"
    purchases }|--|| suppliers : "from"          
    purchase_return }|--|| suppliers : "to"
    purchase_return }|--|| purchases : "references"
    purchase_return ||--o{ return_items : "has"
    return_items }|--|| products : "references"
    return_items }|--|| animals : "references"
    return_items }|--|| groomings : "references"
    return_items }|--|| breedings : "references"
    return_items }|--|| hotels : "references"
    transaction_returns }|--|| pos_transactions : "references"
    transaction_returns }|--|| olshop_transactions : "references"
    transaction_returns ||--o{ return_items : "has"
